@@ -1,3 +1,8 @@
+<b>2008-11-22</b>
+
+* ICAO and private airports now supported for FlightMemory imports.
+* Empty seat class in FlightMemory now maps to "Economy" automatically.
+
 <b>2008-11-21</b>
 
 * Autocomplete implemented for selecting planes.
